调整通用样式

--- a/src/assets/sytle/darkConfig.less
+++ b/src/assets/sytle/darkConfig.less
@@ -1,15 +1,31 @@
-@mainColor: #264F4D;
-@secondaryColor01: #396B6C;
-@secondaryColor02: #578579;
-@secondaryColor03: #88B690;
-@contrastColor: #E7A747;
-@soft100: rgba(0, 0, 0, 1);
-@soft85: rgba(0, 0, 0, 0.85);
-@soft50: rgba(0, 0, 0, 0.5);
-@soft15: rgba(0, 0, 0, 0.15);
-@heavy100: rgba(255, 255, 255, 1);
-@heavy85: rgba(255, 255, 255, 0.85);
-@heavy50: rgba(255, 255, 255, 0.5);
-@heavy15: rgba(255, 255, 255, 0.15);
-@disable: rgba(255, 255, 255, 0.08);
-@background: #282828;
+@primaryDark: #163534;
+@primary: #264F4D;
+@primaryLight: #3A6D6B;
+@primaryHighlight: #9CE5E3;
+@secondaryDark: #B46C00;
+@secondary: #DA8300;
+@secondaryLight: #FFBD5A;
+@primaryBg: #212121;
+@secondaryBg: #2F2F2F;
+@textPrimary: #FFFFFF;
+@textPrimary2: #F6F6F6;
+@textPrimary3: #999999;
+@textPrimary4: #666666;
+@textPrimary5: #2F2F2F;
+@textOnMask: rgba(255, 255, 255, 0.8);
+
+@textOnMask2: rgba(255, 255, 255, 0.6);
+@textOnMask3: rgba(255, 255, 255, 0.45);
+@maskDark: rgba(0, 0, 0, 0.7);
+@maskPrimary: rgba(0, 0, 0, 0.5);
+@maskLight: rgba(0, 0, 0, 0.3);
+@systemSuccess: #298919;
+@systemError: #CE0E30;
+@systemWarn: #E28B08;
+@systemLink: #163FA8;
+
+@lineColor: linear-gradient(107.66deg, #BD24CF 0%, #B4172C 100%);
+@lineColor2: linear-gradient(107.66deg, #E74174 0%, #BEA61F 100%);
+@lineColor3: linear-gradient(107.66deg, #12CC77 0%, #0968A0 100%);
+@lineColor4: linear-gradient(107.66deg, #E0562B 0%, #B30D35 100%);
+@lineColor5: linear-gradient(107.66deg, #0DA6C9 0%, #7D12AF 100%);
