--- a/src/assets/sytle/fontstyle.less
+++ b/src/assets/sytle/fontstyle.less
@@ -1,60 +1,95 @@
-.header1{
-    font-size: 32px;
-    font-weight: 800;
-    line-height: 60px;
+.H1 {
+    font-weight: 400;
+    font-size: 96px;
+    line-height: 134px;
+    letter-spacing: -0.015em;
 }
-.header2{
-    font-size: 30px;
-    font-weight: 800;
+
+.H2 {
+    font-weight: 400;
+    font-size: 60px;
+    line-height: 90px;
+    letter-spacing: -0.005em;
+}
+
+.H3 {
+    font-weight: 500;
+    font-size: 48px;
+    line-height: 72px;
+}
+
+.H4 {
+    font-weight: 500;
+    font-size: 36px;
     line-height: 52px;
+    letter-spacing: 0.0025em;
 }
-.header3{
-    font-size: 28px;
-    font-weight: 800;
-    line-height: 52px;
-}
-.header4{
+
+.H5 {
+    font-weight: 500;
     font-size: 24px;
-    font-weight: 800;
-    line-height: 40px;
-}
-.header5{
-    font-size: 20px;
-    font-weight: 800;
     line-height: 36px;
 }
-.header6{
-    font-size: 18px;
-    font-weight: 800;
-    line-height: 32px;
+
+.H6 {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 30px;
+    letter-spacing: 0.0015em;
 }
-.header7{
+
+.subTitle1 {
+    font-weight: 500;
     font-size: 16px;
-    font-weight: 800;
-    line-height: 28px;
+    line-height: 24px;
+    letter-spacing: 0.0015em;
 }
-.body1{
+
+.subTitle2 {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 20px;
+    letter-spacing: 0.001em;
+}
+
+.subTitle3 {
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 16px;
+    letter-spacing: 0.005em;
+}
+
+.body1 {
+    font-weight: 400;
     font-size: 16px;
-    font-weight: 400;
-    line-height: 28px; 
+    line-height: 24px;
+    letter-spacing: 0.005em;
 }
-.body2{
+
+.body2 {
+    font-weight: 400;
     font-size: 14px;
-    font-weight: 800;
-    line-height: 24px; 
+    line-height: 20px;
+    letter-spacing: 0.0025em;
 }
-.body3{
+
+.body3 {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 16px;
+    letter-spacing: 0.005em;
+}
+
+.textBtn {
+    font-weight: 500;
     font-size: 14px;
-    font-weight: 400;
-    line-height: 24px; 
+    line-height: 22px;
+    letter-spacing: 0.0125em;
 }
-.body4{
-    font-size: 12px;
-    font-weight: 800;
-    line-height: 20px; 
-}
-.body5{
-    font-size: 12px;
-    font-weight: 400;
-    line-height: 20px; 
+
+.miniText {
+    font-weight: 500;
+    font-size: 10px;
+    line-height: 16px;
+    letter-spacing: 0.0125em;
 }
