--- a/src/assets/sytle/lightConfig.less
+++ b/src/assets/sytle/lightConfig.less
@@ -1,15 +1,30 @@
-@mainColor: #5B9896;
-@secondaryColor01: #77B4B6;
-@secondaryColor02: #A7DCCE;
-@secondaryColor03: #D2ECD7;
-@contrastColor: #FEF4A9;
-@soft100: rgba(255, 255, 255, 1);
-@soft85: rgba(255, 255, 255, 0.85);
-@soft50: rgba(255, 255, 255, 0.5);
-@soft15: rgba(255, 255, 255, 0.15);
-@heavy100: rgba(0, 0, 0, 1);
-@heavy85: rgba(0, 0, 0, 0.85);
-@heavy50: rgba(0, 0, 0, 0.5);
-@heavy15: rgba(0, 0, 0, 0.15);
-@disable: rgba(0, 0, 0, 0.08);
-@background: #f6f6f6;
+@primaryDark: #234E4C;
+@primary: #407775;
+@primaryLight: #60A6A3;
+@primaryHighlight: #D6F3F2;
+@secondaryDark: #F5B02A;
+@secondary: #FFC350;
+@secondaryLight: #FFD78B;
+@primaryBg: #F6F6F6;
+@secondaryBg: #FFFFFF;
+@textPrimary: #212121;
+@textPrimary2: #2F2F2F;
+@textPrimary3: #666666;
+@textPrimary4: #999999;
+@textPrimary5: #F6F6F6;
+@textOnMask: #FFFFFF;
+@textOnMask2: rgba(255, 255, 255, 0.85);
+@textOnMask3: rgba(255, 255, 255, 0.6);
+@maskDark: rgba(0, 0, 0, 0.6);
+@maskPrimary: rgba(0, 0, 0, 0.4);
+@maskLight: rgba(0, 0, 0, 0.2);
+@systemSuccess: #41B72E;
+@systemError: #F10731;
+@systemWarn: #F4AA19;
+@systemLink: #1957F4;
+
+@lineColor: linear-gradient(107.66deg, #F177FF 0%, #F04259 100%);
+@lineColor2: linear-gradient(107.66deg, #FA709A 0%, #FEE140 100%);
+@lineColor3: linear-gradient(107.66deg, #2AF598 0%, #009EFD 100%);
+@lineColor4: linear-gradient(107.66deg, #F97D57 0%, #FF0844 100%);
+@lineColor5: linear-gradient(107.66deg, #21D4FD 0%, #B821FF 100%);
