--- a/src/assets/sytle/universal.less
+++ b/src/assets/sytle/universal.less
@@ -369,11 +369,11 @@ body,
         }
 
         p:hover {
-            color: @secondaryDark;
+            color: @systemSuccess;
         }
 
         .active {
-            color: @secondaryDark;
+            color: @systemSuccess;
         }
     }
 
